tests/baselines/reference/multiline.errors.txt
b.tsx(33,1): error TS2578: Unused '@ts-expect-error' directive.


==== b.tsx (1 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    import * as React from "react";
    
    export function MyComponent(props: { foo: string }) {
      return <div />;
    }
    
    let x = (
      <div>
        {/*
       @ts-ignore */}
        <MyComponent foo={100} />
    
        {/*@ts-ignore*/}
        <MyComponent foo={100} />
    
        {/*
       @ts-expect-error */}
        <MyComponent foo={100} />
    
        {/*
       // @ts-expect-error */}
        <MyComponent foo={100} />
    
        {/*
       * @ts-expect-error */}
        <MyComponent foo={100} />
    
        {/*@ts-expect-error*/}
        <MyComponent foo={100} />
    
        {/*
       @ts-expect-error */}
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
        <MyComponent foo={"hooray"} />
      </div>
    );
    
==== a.ts (0 errors) ====
    export const texts: string[] = [];
    
    /**
     @ts-ignore */
    texts.push(100);
    
    /**
     @ts-expect-error */
    texts.push(100);
    
    /**
     @ts-expect-error */
    texts.push("100");
    